# platform.core.api.audio-io

./: .gitignore  AUTHORS  CMakeLists.txt
TC/testcase/: Makefile  tslist  utc_media_audio_input.c  utc_media_audio_output.c
debian/: changelog  control  rules
doc/: audio_io_doc.h
include/: CAudioError.h  CAudioIO.h  CAudioIODef.h  CAudioInfo.h  CAudioInput.h  CAudioOutput.h  CAudioSessionHandler.h  CPulseAudioClient.h  CPulseAudioPolicy.h  CPulseAudioVolume.h  CPulseStreamSpec.h  IAudioSessionEventListener.h  IPulseStreamListener.h  audio_io.h  audio_io_internal.h  audio_io_private.h  cpp_audio_io.h
packaging/: capi-media-audio-io.changes  capi-media-audio-io.spec
src/: audio_io.c  audio_io_internal.c  audio_io_private.c
src/cpp/: CAudioError.cpp  CAudioIO.cpp  CAudioInfo.cpp  CAudioInput.cpp  CAudioOutput.cpp  CAudioSessionHandler.cpp  CPulseAudioClient.cpp  CPulseAudioPolicy.cpp  CPulseAudioVolume.cpp  CPulseStreamSpec.cpp  cpp_audio_io.cpp
test/: CMakeLists.txt  audio_io_test.c
